--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 icon.png filter=lfs diff=lfs merge=lfs -text
+fantasia-fantasia-by-kevin-macleod.mp3 filter=lfs diff=lfs merge=lfs -text
+fantasia-fantasia-by-kevin-macleod.ogg filter=lfs diff=lfs merge=lfs -text
